--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -11,6 +11,9 @@
     <string name="menu_rename">Renommer</string>
     <string name="menu_backup">Sauvegarder</string>
     <string name="menu_changepw">Modifier Phrase secrète</string>
+    <string name="menu_back">Précédent</string>
+    <string name="menu_close">fermer</string>
+    <string name="menu_cancel">Annuler</string>
 
     <string name="password_weak">Continuez de taper &#8230;</string>
     <string name="password_fair">Bof &#8230;</string>
@@ -261,6 +264,8 @@
     <string name="receive_amount_too_big">Max. %1$s</string>
     <string name="receive_amount_negative">Min. 0</string>
     <string name="receive_amount_nan">XMR pas un nombre</string>
+    <string name="copy_receive_address">Copier l’adresse de réception</string>
+    <string name="paste_give_address">Coller donner l'adresse</string>
 
     <string name="details_alert_message">Des données sensible vont être affichées.\nRegardez autour de vous !</string>
     <string name="details_alert_yes">C\'est bon</string>
@@ -414,6 +419,7 @@
     <string name="subaddress_notx_label">No transactions for this subaddress yet</string>
     <string name="subaddress_select_label">Select a subaddress</string>
     <string name="subaddress_details_hint">Long-press for details</string>
+    <string name="subaddress_add">Ajouter une sous-adresse</string>
 
     <string name="menu_delete">Delete</string><!-- like: "Delete wallet!" -->
     <string name="delete_failed">Delete failed!</string>
@@ -428,6 +434,7 @@
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+    <string name="tor_enable">Activer TOR</string>
 
     <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
     <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
