--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -433,7 +433,7 @@
 
     <string name="tx_locked">Monto trabado hasta el bloque %1$d (faltan %2$d bloques ≈ %3$,.2f días)</string>
 
-    <string name="label_streetmode">Modo calle activado\nSólo se ºmostrarán transacciones nuevas</string>
+    <string name="label_streetmode">Modo calle activado\nSólo se mostrarán transacciones nuevas</string>
 
     <string name="pocketchange_info">To reduce waiting time on repeated spending, Monerujo can create spare change at the expense of higher fees. It\'ll try to create and maintain at least 6 coins of the selected amount.</string>
     <string name="pocketchange_create_title">Create Change</string>
