--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,27 +35,27 @@
 
     <string name="label_receive_info_gen_qr_code">Touch for QR Code</string>
 
-    <string name="info_xmrto_enabled">Non-XMR payments enabled, tap for more info.</string>
+    <string name="info_xmrto_enabled">You can convert XMR to other coins, tap to read more.</string>
     <string name="info_ledger_enabled">Ledger enabled, tap for more info.</string>
 
     <string name="info_xmrto"><![CDATA[
         <b>You entered a %1$s address.</b><br/>
-        <i>You&apos;ll send XMR and the receiver will get %1$s using the <b>SideShift.ai</b> service.</i>
+        <i>You&apos;ll send XMR and this address will receive %1$s using an exchange service.</i>
     ]]></string>
 
-    <string name="info_send_xmrto_success_order_label">SideShift.ai Order</string>
+    <string name="info_send_xmrto_success_order_label">Exchange Order</string>
 
     <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
     <string name="info_send_xmrto_paid">Confirmation Pending</string>
     <string name="info_send_xmrto_unpaid">Payment Pending</string>
-    <string name="info_send_xmrto_error">SideShift.ai Error (%1$s)</string>
+    <string name="info_send_xmrto_error">Exchange Error (%1$s)</string>
     <string name="info_send_xmrto_sent">%1$s Sent!</string>
     <string name="info_send_xmrto_query">Querying &#8230;</string>
 
     <string name="info_send_xmrto_parms"><![CDATA[
         <b>You can send %1$s &#8212; %2$s %4$s</b>.<br/>
-        <i><b>SideShift.ai</b> is giving you an exchange rate of <b>%3$s %4$s/XMR</b> <u>right now</u></i>.
+        <i><b>The exchange</b> is giving you an exchange rate of <b>%3$s %4$s/XMR</b> <u>right now</u></i>.
     ]]></string>
 
     <string name="send_available_btc">Balance: %2$s %3$s (%1$s XMR)</string>
@@ -63,25 +63,25 @@
     <string name="info_paymentid_integrated">&#x2714; Payment ID integrated</string>
     <string name="info_prepare_tx">Preparing your transaction</string>
 
-    <string name="label_send_progress_xmrto_create">Creating SideShift.ai Order</string>
-    <string name="label_send_progress_xmrto_query">Querying SideShift.ai Order</string>
+    <string name="label_send_progress_xmrto_create">Creating exchange Order</string>
+    <string name="label_send_progress_xmrto_query">Querying exchange Order</string>
     <string name="label_send_progress_create_tx">Preparing Monero Transaction</string>
 
-    <string name="label_send_progress_queryparms">Querying SideShift.ai parameters</string>
+    <string name="label_send_progress_queryparms">Querying exchange parameters</string>
 
-    <string name="label_generic_xmrto_error">SideShift.ai ERROR</string>
+    <string name="label_generic_xmrto_error">Exchange service ERROR</string>
     <string name="text_generic_xmrto_error">Code: %1$d</string>
 
     <string name="text_retry">Touch to retry</string>
     <string name="text_noretry_monero">Now we\'re stuck here!</string>
-    <string name="text_noretry">Uh-oh, SideShift.ai does not seem be available right now!</string>
+    <string name="text_noretry">Uh-oh, the exchange service does not seem be available right now!</string>
 
     <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
     <string name="text_send_btc_rate">(Rate: %1$s %2$s/XMR)</string>
 
-    <string name="label_send_btc_xmrto_info">Visit SideShift.ai for support &amp; tracking</string>
-    <string name="label_send_btc_xmrto_key_lb">Secret Key\nSideShift.ai</string>
-    <string name="label_send_btc_xmrto_key">SideShift.ai Secret Key</string>
+    <string name="label_send_btc_xmrto_info">Visit the exchange website for support &amp; tracking</string>
+    <string name="label_send_btc_xmrto_key_lb">Order number\nExchange</string>
+    <string name="label_send_btc_xmrto_key">Exchange order number</string>
     <string name="label_send_btc_address">Destination %1$s Address</string>
     <string name="label_send_btc_amount">Amount</string>
 
@@ -144,11 +144,11 @@
 
     <string name="xmr_unconfirmed_amount">+ %1$s %2$s unconfirmed</string>
 
-    <string name="service_description">monerujo Service</string>
+    <string name="service_description">Wallet is open</string>
 
     <string name="status_synced">Synced:</string>
     <string name="status_remaining">Blocks remaining</string>
-    <string name="status_syncing">Scanning:</string>
+    <string name="status_syncing">Syncing:</string>
 
     <string name="message_strorage_not_writable">External Storage is not writable! Panic!</string>
     <string name="message_strorage_not_permitted">We really need those External Storage permissions!</string>
@@ -382,7 +382,7 @@
     <string name="onboarding_seed_title">Keep your seed safe</string>
     <string name="onboarding_seed_information">The seed grants full access to whoever has it. If you lose it, we cannot help you recover it and you lose your beloved moneroj.</string>
     <string name="onboarding_xmrto_title">Send Crypto</string>
-    <string name="onboarding_xmrto_information">Monerujo has SideShift.ai support built-in. Just paste or scan a BTC, LTC, ETH, DASH or DOGE address and you\'ll be sending these cryptos by spending XMR.</string>
+    <string name="onboarding_xmrto_information">Monerujo has support for exchanges built-in. You can use XMR to pay in several other cryptos.</string>
     <string name="onboarding_nodes_title">Nodes, your way</string>
     <string name="onboarding_nodes_information">Nodes connect you to the Monero network. Choose between public nodes or go full cypherpunk using your own.</string>
     <string name="onboarding_fpsend_title">Send with fingerprint</string>
